# md2md

./: Cargo.toml  Makefile  README.md  generate-readme.sh
.github/workflows/: release.yml
examples/: input_file_referencing_a_template.md
examples/partials/: demo-template.md  document-footer.md  document-header.md  filename.md  header.md  readme-cli.md  readme-examples.md  readme-features.md  readme-header.md  readme-quickstart.md  readme-syntax.md  readme-terminology.md
examples/source-documents/: README-base.md  demo.md  mixed-directives.md
examples/templates/: lorem.md
examples/test-code/: example.py  hello.rs
src/: action.rs  app.rs  cli_messages.rs  event.rs  file_handler.rs  include_resolver.rs  lib.rs  main.rs  processor.rs  tui.rs  types.rs
src/components/: analysis.rs  error_summary.rs  files.rs  mod.rs  progress.rs  summary.rs
