[package]
name = "md2md"
description = "A Markdown to Markdown processor with include directives and batch processing. Similar to markedpp but with enhanced path resolution."
version = "0.2.4"
edition = "2024"
authors = ["Diego Coy (https://github.com/funnierinspanish)"]
repository = "https://github.com/funnierinspanish/md2md"

[dependencies]
anstyle = "1.0.11"
clap = { version = "4.5.37", features = ["derive", "cargo"] }
regex = "1.10"
ratatui = "0.29.0"
crossterm = "0.28.1"
atty = "0.2"

[dev-dependencies]
tempfile = "3.10"
