[package]
name = "md2md"
description = "A Markdown to Markdown processor that supports include directives and code snippet inclusion for reusable content composition... A templating system for Markdown that outputs to Markdown."
version = "0.3.2"
edition = "2024"
authors = ["Diego Coy (https://github.com/funnierinspanish)"]
repository = "https://github.com/funnierinspanish/md2md"

[dependencies]
anstyle = "1.0.11"
clap = { version = "4.5.37", features = ["derive", "cargo"] }
regex = "1.10"
ratatui = "0.29.0"
crossterm = "0.28.1"
atty = "0.2"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
strip=true
opt-level = "s"
lto = true
codegen-units = 1